# gsq

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  readme.md
data/: convex_order.gsp  select_points.gsp  select_points.txt  select_polygons.gsp  select_polygons.txt
include/: bound.hpp  canvas.hpp  convex.hpp  file_buffer.hpp  mesh.hpp  polygon.hpp  program.hpp  shader.hpp  uniform.hpp
include/config/: config.hpp  data.hpp  font.hpp  gl.hpp  type.hpp
include/model/: canvasGen.hpp  canvasOp.hpp
include/version/: version.hpp
lib/Debug/: glfw3.lib
lib/Release/: glfw3.lib
src/: CMakeLists.txt  convex.cpp  data.cpp  glad.c  main.cpp  polygon.cpp  shader.cpp
src/model/: canvasGen.cpp
src/shader/: canvasBlendPointsWithPolygons.frag  canvasBlendPolygons.frag  canvasGen.frag  canvasGen.vert  point.frag  point.vert
